--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-  "liveServer.settings.port": 5501
+  "liveServer.settings.port": 5501,
+  "chat.mcp.assisted.nuget.enabled": false,
+  "chat.mcp.gallery.enabled": false
 }
