--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "studiodragon",
   "version": "1.0.0",
   "description": "",
-  "main": "work_ryu.html",
+  "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "echo 'No build step required for static content'"
